@@ -1,3 +1,7 @@
+25 October 2007
+
+* (nicm) has-session command: checks if session exists.
+
 24 October 2007
 
 * (nicm) Support for \e6n to request cursor position. resize(1) now works.
@@ -159,5 +163,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.50 2007-10-24 15:29:27 nicm Exp $
+$Id: CHANGES,v 1.51 2007-10-25 17:44:24 nicm Exp $
 
